Complete Summary Balance Section

--- a/Expense-Tracker/index.html
+++ b/Expense-Tracker/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ions Links -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
     <title>Expense Tracker</title>
 </head>
+
 <body>
-    
+
+
+
+    <!-- Start -->
+
+    <!-- Summery Total Balance -->
+
+    <div class="total-balance">
+        
+        <h1 class="balance-heading"><i class="fa-solid fa-circle-check"></i> Balance: <span id="updateBal"> 1000</span></h1>
+    <br>
+
+    <div class="total">
+
+        <div class="showIncome">
+            Total Income:
+            <div>
+            <h2 class="t-inc" id="updatedInc">
+                5600
+            </h2>
+        </div>
+        </div>
+
+        <div class="vertical"></div>
+
+        <div class="totalExp">
+            Total Expense:
+            <div>
+            <h2 class="t-exp" id="updatedExp"> 12000 </h2>
+        </div>
+        </div>
+
+
+    </div>
+</div>
+
+    <!-- End -->
+
+
 </body>
+
 </html>
