--- a/Expense-Tracker/index.html
+++ b/Expense-Tracker/index.html
@@ -1,64 +1,56 @@
+<!-- index.html-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- ions Links -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" 
+          content="width=device-width, 
+                   initial-scale=1.0" />
+    <link rel="stylesheet" 
+          href="style.css" />
     <title>Expense Tracker</title>
 </head>
 
 <body>
-
-
-
-    <!-- Start -->
-
-    <!-- Summery Total Balance -->
-
-    <div class="total-balance">
-
-        <h1 class="balance-heading"><i class="fa-solid fa-circle-check"></i> Balance: <span id="updateBal"> 1000</span>
-        </h1>
-        <br>
-
+    <div class="main">
+    <div class="summary">
+        <div>
+            <h1>&#10004; Balance:
+                <span id="updatedBal">
+                      7000
+                  </span>
+            </h1>
+        </div>
+        <br />
         <div class="total">
-
-            <div class="showIncome">
+            <div>
                 Total Income:
                 <div>
-                    <h2 class="t-inc" id="updatedInc">
-                        5600
+                    <h2 style="color: green;"
+                        id="updatedInc">
+                        25000
                     </h2>
                 </div>
             </div>
-
-            <div class="vertical"></div>
-
-            <div class="totalExp">
-                Total Expense:
+            <hr class="verticle" />
+            <div>
+                Total Expenses:
                 <div>
-                    <h2 class="t-exp" id="updatedExp"> 12000 </h2>
+                    <h2 style="color: red;" 
+                        id="updatedExp">
+                        18000
+                    </h2>
                 </div>
             </div>
-
-
         </div>
     </div>
-
-    <!-- Expense Table -->
-
-
     <div class="root">
-        <div class="items">
-            <h2 style="margin-bottom: 25px;">Expense </h2>
+        <div id="items">
+            <h2>Expenses</h2>
             <table id="table">
-                <tr>
+                <tr class="titles">
                     <th>S.no.</th>
                     <th>Name</th>
                     <th>Amount</th>
@@ -67,35 +59,43 @@
                 </tr>
             </table>
         </div>
-        <div class="vertical-2"></div>
-
-        <!-- Income Management -->
-
+        <hr class="vertical" />
         <div id="new">
-            <h2 style="margin-bottom: 25px;">Add New </h2>
-            <div class="input">
-                <div class="inputItem">
-                    <p style="width: 9rem;">Entry type: </p>
-                    <select id="itemType">
+            <h2>Add new</h2>
+
+            <div class="inputs">
+                <div class="inputitem">
+                    <p style="width: 9rem">
+                        Entry type:
+                    </p>
+                    <select id='itemType'>
                         <option value="0">Expense</option>
                         <option value="1">Income</option>
                     </select>
                 </div>
-                <div class="inputItem">
-                    <p style="width: 9rem;">Name:</p>
-                    <input type="text" id="name" value="" placeholder="name">
+                <div class="inputitem">
+                    <p style="width: 9rem">Name:</p>
+                    <input id="name" 
+                           type="text"
+                           value="" 
+                           placeholder="name" />
                 </div>
-                <div class="inputItem">
-                    <p style="width: 9rem;">Amount:</p>
-                    <input type="text" name="mod" id="amount" value="" placeholder="amount">
+                <div class="inputitem">
+                    <p style="width: 9rem">Amount:</p>
+                    <input value="0" 
+                           id="amount"
+                           name="mod" 
+                           type="number" 
+                           placeholder="amount" />
                 </div>
             </div>
-            <button>Add Expense</button>
+            <button onclick="addItem()">
+                Add Expense
+            </button>
         </div>
     </div>
-
-    <!-- End -->
-
+</div>
+    <script src="script.js"></script>
 </body>
 
 </html>
